crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__coding.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Coding and analysis tiers: %cod, %spa, %int, %eng, %err, %fac, %flo, %ort",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: cod_dependent_tier, spa_dependent_tier, int_dependent_tier,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "eng_dependent_tier, err_dependent_tier, fac_dependent_tier, flo_dependent_tier,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "ort_dependent_tier",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "$NOM $ADJ",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Cod"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "$ADES",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Spa"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "rising",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Int"
        },
        {
          "data": "big elephant",
          "type": "Eng"
        },
        {
          "data": "elefanto=elefante $LEX",
          "type": "Err"
        },
        {
          "data": "smiling",
          "type": "Fac"
        },
        {
          "data": "fluent .",
          "type": "Flo"
        },
        {
          "data": "elefanto grande",
          "type": "Ort"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "elefanto",
              "content": [
                {
                  "content": "elefanto",
                  "type": "text"
                }
              ],
              "raw_text": "elefanto",
              "type": "word"
            },
            {
              "cleaned_text": "grande",
              "content": [
                {
                  "content": "grande",
                  "type": "text"
                }
              ],
              "raw_text": "grande",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
