crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__com-ipa.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "OPE"
          },
          {
            "name": null,
            "role": "Grandmother",
            "speaker_code": "GRA"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;04.25",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Speaker",
        "speaker": "OPE",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Grandmother",
        "speaker": "GRA",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "04-DEC-2000",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "com-ipa",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-APR-2003",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "chris harris, mike jackson",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Language of Caregivers Mother Southeastern Massachusetts,\n\tFather Southeastern Massachusetts, Grandmother Southeastern\n\tMassachusetts; Speaker is Manuela",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": "əˈmaɪs ɛmˈpʊʃ",
            "label": "xpho"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "after transcribing the entire file, I realized that pʊʃ and",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "similar sounding things might mean \"open this .\" Things that sound",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "like əˈmaɪ or ʊˈmaɪ seem to connote desire roughly, \"I want",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "Mommy to\" or \"I want you to\" or something like that: this is what",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "CHI usually says when he's asking his mom to do something for him .",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "I've transcribed it as \"Mommy\" .",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 621843,
            "start_ms": 620128
          },
          "content": [
            {
              "content": [
                {
                  "content": "Mommy",
                  "type": "text"
                }
              ],
              "raw_text": "Mommy",
              "span": {
                "end": 564,
                "start": 559
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "open",
                  "type": "text"
                }
              ],
              "raw_text": "open",
              "span": {
                "end": 569,
                "start": 565
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 574,
                "start": 570
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "04-DEC-2000",
      "code": "CHI",
      "id": {
        "age": "2;04.25",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "GRA": {
      "birth_date": null,
      "code": "GRA",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Grandmother",
        "speaker": "GRA"
      },
      "name": null,
      "role": "Grandmother"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    },
    "OPE": {
      "birth_date": null,
      "code": "OPE",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Speaker",
        "speaker": "OPE"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
