crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__com-more.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "TXT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;09.08",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "TXT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "TTHIS can (happen) in \"quotes\" or even with !! sometimes.",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 128,
                "start": 124
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "a-a-and - -- we get *** /this\\ or #{this} with @^$ +  and the rest.",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 204,
                "start": 200
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "then there is IPA ɟɮɬːɟɮːɬʉɨɤθ and so on",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 290,
                "start": 286
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "and there are the CA characters ↓↑∆∇t☺ and so on (see manual)",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 361,
                "start": 357
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "and CJK 阿萨德",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 451,
                "start": 447
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "there are extended Latin characters ňŝâ, and Greek ζΫβ, Cyrillic",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "чДЋ, Hebrew דים, and some هإكآday we will have Arabic etc.",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "text",
                  "type": "text"
                }
              ],
              "raw_text": "text",
              "span": {
                "end": 487,
                "start": 483
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "TXT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "TXT": {
      "birth_date": null,
      "code": "TXT",
      "id": {
        "age": "1;09.08",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "TXT"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
