crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__com.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Environment",
            "speaker_code": "ENV"
          },
          {
            "name": null,
            "role": "Grandmother",
            "speaker_code": "GRA"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;09.08",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "providence",
        "language": "eng",
        "role": "Grandmother",
        "speaker": "GRA",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "14-MAR-2001",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "com",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "22-DEC-2002",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "sarah mckim",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": "ˈmɛʔ tɜ˞ndəˈweɪdioˈɑn",
            "label": "xpho"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "stuff",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 556590,
            "start_ms": 553171
          },
          "content": [
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 389,
                "start": 386
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "turn",
                  "type": "text"
                }
              ],
              "raw_text": "turn",
              "span": {
                "end": 394,
                "start": 390
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 398,
                "start": 395
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "radio",
                  "type": "text"
                }
              ],
              "raw_text": "radio",
              "span": {
                "end": 404,
                "start": 399
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "span": {
                "end": 407,
                "start": 405
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "14-MAR-2001",
      "code": "CHI",
      "id": {
        "age": "1;09.08",
        "corpus": "providence",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "ENV": {
      "birth_date": null,
      "code": "ENV",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV"
      },
      "name": null,
      "role": "Environment"
    },
    "GRA": {
      "birth_date": null,
      "code": "GRA",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Grandmother",
        "speaker": "GRA"
      },
      "name": null,
      "role": "Grandmother"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "providence",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
