crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__completion.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "ha",
                  "type": "text"
                },
                {
                  "content": "i",
                  "type": "shortening"
                },
                {
                  "content": "e",
                  "type": "text"
                },
                {
                  "content": "i",
                  "type": "shortening"
                },
                {
                  "content": "e",
                  "type": "text"
                },
                {
                  "content": "i",
                  "type": "shortening"
                },
                {
                  "content": "o",
                  "type": "text"
                }
              ],
              "raw_text": "ha(i)e(i)e(i)o",
              "span": {
                "end": 168,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                },
                {
                  "content": "bar",
                  "type": "shortening"
                }
              ],
              "raw_text": "foo(bar)",
              "span": {
                "end": 177,
                "start": 169
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "baz",
                  "type": "text"
                },
                {
                  "content": "ball",
                  "type": "shortening"
                }
              ],
              "raw_text": "baz(ball)",
              "span": {
                "end": 187,
                "start": 178
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
